[gd_scene load_steps=8 format=3 uid="uid://b1s6sl414nt5u"]

[ext_resource type="Script" path="res://src/master_world.gd" id="1_i5r4v"]
[ext_resource type="Texture2D" uid="uid://bfma3wjogeq13" path="res://assets/icon.svg" id="2_ngoul"]
[ext_resource type="Script" path="res://src/MiddleDefense.gd" id="2_rmmb4"]

[sub_resource type="Curve2D" id="Curve2D_h52k4"]
_data = {
"points": PackedVector2Array(-2.84006, -400, 0, 400, 0, 0, 0, 0, 0, 0, 0, 800)
}
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_70c8h"]
radius = 59.2115

[sub_resource type="Curve2D" id="Curve2D_8raxa"]
_data = {
"points": PackedVector2Array(-2.84006, -400, 0, 400, 0, 0, 0, 0, 0, 0, 0, 800)
}
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_r7y22"]
radius = 17.0294

[node name="MasterWorld" type="Node2D"]
script = ExtResource("1_i5r4v")

[node name="StartPanel" type="Panel" parent="."]
visible = false
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1280.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StartPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -20.0
offset_right = 25.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameSelect" type="OptionButton" parent="StartPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
item_count = 3
selected = 0
popup/item_0/text = "Tennis"
popup/item_0/id = 0
popup/item_1/text = "Light Cycles"
popup/item_1/id = 1
popup/item_2/text = "Falling Blocks"
popup/item_2/id = 2

[node name="Start" type="Button" parent="StartPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 36
text = "Start
"

[node name="Reset" type="Button" parent="StartPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 36
text = "Reset"

[node name="Quit" type="Button" parent="StartPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Quit"

[node name="Minigames" type="Node" parent="."]

[node name="MiddleDefense" type="Node2D" parent="Minigames"]
script = ExtResource("2_rmmb4")

[node name="PlayerOneLine" type="Line2D" parent="Minigames/MiddleDefense"]
position = Vector2(320, 0)
points = PackedVector2Array(0, 0, 0, 400)
width = 2.0

[node name="PlayerTwoLine" type="Line2D" parent="Minigames/MiddleDefense"]
position = Vector2(960, 0)
points = PackedVector2Array(0, 0, 0, 400)
width = 2.0

[node name="PlayerOnePath" type="Path2D" parent="Minigames/MiddleDefense"]
position = Vector2(320, 0)
curve = SubResource("Curve2D_h52k4")

[node name="PathFollow2D" type="PathFollow2D" parent="Minigames/MiddleDefense/PlayerOnePath"]
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="Minigames/MiddleDefense/PlayerOnePath/PathFollow2D"]
texture = ExtResource("2_ngoul")

[node name="Area2D" type="Area2D" parent="Minigames/MiddleDefense/PlayerOnePath/PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Minigames/MiddleDefense/PlayerOnePath/PathFollow2D/Area2D"]
shape = SubResource("CircleShape2D_70c8h")

[node name="PlayerTwoPath" type="Path2D" parent="Minigames/MiddleDefense"]
position = Vector2(960, 0)
curve = SubResource("Curve2D_8raxa")

[node name="PathFollow2D" type="PathFollow2D" parent="Minigames/MiddleDefense/PlayerTwoPath"]
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="Minigames/MiddleDefense/PlayerTwoPath/PathFollow2D"]
texture = ExtResource("2_ngoul")

[node name="Area2D" type="Area2D" parent="Minigames/MiddleDefense/PlayerTwoPath/PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Minigames/MiddleDefense/PlayerTwoPath/PathFollow2D/Area2D"]
shape = SubResource("CircleShape2D_70c8h")

[node name="PlayerOneHitBox" type="Area2D" parent="Minigames/MiddleDefense"]
position = Vector2(320, 830)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Minigames/MiddleDefense/PlayerOneHitBox"]
shape = SubResource("CircleShape2D_r7y22")

[node name="PlayerTwoHitBox" type="Area2D" parent="Minigames/MiddleDefense"]
position = Vector2(960, 830)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Minigames/MiddleDefense/PlayerTwoHitBox"]
shape = SubResource("CircleShape2D_r7y22")

[connection signal="button_up" from="StartPanel/VBoxContainer/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="StartPanel/VBoxContainer/Reset" to="." method="_on_reset_button_up"]
[connection signal="button_up" from="StartPanel/VBoxContainer/Quit" to="." method="_on_quit_button_up"]
